# HDKFaceExplosion

./: .gitignore  CMakeLists.txt  LICENSE  README.md
shell/: build.sh
source/: faceexplosion.cpp  faceexplosion.h
